# GoogleCodingChallenges

./: .gitignore  CMakeLists.txt  README.md
KickStart/2016/Round_A/1_CountryLeader/: CMakeLists.txt  main.cc  test.txt
KickStart/2016/Round_B/1_Sherlock/: CMakeLists.txt  main.cc
KickStart/2019/Practice_Round/Mural/: main.cc
KickStart/2019/Practice_Round/Number_Guessing/: main.cc
KickStart/2019/Round_A/: main.cc
KickStart/2019/Round_A/Contention/: main.cc
KickStart/2019/Round_A/Parcels/: CMakeLists.txt  main.cc
KickStart/2019/Round_A/Training/: main.cc
KickStart/2019/Round_B/EnergyStones/: CMakeLists.txt  main.cc  test.txt
KickStart/2019/Round_B/Palindromes/: main.cc
Techniques/: CMakeLists.txt
Techniques/DFS/: main.cc
Techniques/IntervalleTree/: CMakeLists.txt  IntervalleTree.txt  main.cc
