cmake_minimum_required(VERSION 3.12)
project(GoogleChallenges)
add_subdirectory(KickStart/2019/Round_A/Parcels)
add_subdirectory(KickStart/2019/Round_A/Training)
add_subdirectory(KickStart/2019/Round_A/Contention)
add_subdirectory(KickStart/2019/Round_B/Palindromes)
add_subdirectory(KickStart/2019/Round_B/EnergyStones)
add_subdirectory(KickStart/2019/Practice_Round/Number_Guessing)
add_subdirectory(KickStart/2019/Practice_Round/Mural)
add_subdirectory(Techniques/DFS)
add_subdirectory(Techniques/IntervalleTree)
add_subdirectory(KickStart/2016/Round_A/1_CountryLeader)
add_subdirectory(KickStart/2016/Round_B/1_Sherlock)